--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,20 +1,15 @@
 
 <mat-toolbar>
   
-    <span>Gestión de Pizzas</span>
-  
+    <span>Gestión de Pizzas</span> <!--titulo-->
     <span class="example-spacer"></span>
   
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" routerLink="/list-pizzas">
-  
-      <mat-icon>list</mat-icon>
-  
+      <mat-icon>list</mat-icon><!--icono para listar-->
     </button>
   
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" routerLink="/add-pizzas">
-  
-      <mat-icon>add</mat-icon>
-  
+      <mat-icon>add</mat-icon> <!--icono para agregar-->
     </button>
   
   </mat-toolbar>
