--- a/src/app/component/list-pizza/list-pizza.component.html
+++ b/src/app/component/list-pizza/list-pizza.component.html
@@ -8,7 +8,7 @@
   <!--Columna Nombre-->
     <ng-container matColumnDef="nombre">
       <th mat-header-cell *matHeaderCellDef> Nombre </th>
-      <td mat-cell *matCellDef="let element"> {{element.normbre}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
     </ng-container>
   <!--Columna Precio-->
     <ng-container matColumnDef="precio">
